@@ -1,4 +1,7 @@
 
+2009-04-19 12:57 Ali aliov@xfce.org 
+	 * : Fix brightness level settings issue on ibook
+
 2009-04-15  9:41 Ali aliov@xfce.org 
 	 * : Disconnect from all the signals when we reload hal brightness object
 
